src/styles/slick-lightbox.less
.slick-lightbox {
	position: fixed;
	top: 0;
	left: 0;
	z-index: 9999;
	width: 100%;
	height: 100%;
	background: black;
	-webkit-transition: opacity 0.5s ease;
	transition: opacity 0.5s ease;
	&.slick-hide {
		opacity: 0;
		filter: ~"alpha(opacity=0)";
	}
	&.slick-hide-init {
		position: absolute;
		top: -9999px;
		opacity: 0;
		filter: ~"alpha(opacity=0)";
	}
	.slick-lightbox-inner {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		.slick-lightbox-slick {
			.slick-lightbox-slick-item {
				text-align: center;
				overflow: hidden;
				&:before {
					content: '';
					display: inline-block;
					height: 100%;
					vertical-align: middle;
					margin-right: -0.25em;
				}
				.slick-lightbox-slick-img {
					display: inline-block;
					vertical-align: middle;
					max-width: 90%;
					max-height: 90%;
				}
			}
		}
		// used slick's button css
		.slick-lightbox-close {
			position: absolute;
			top: 15px;
			right: 15px;
			display: block;
			height: 20px;
			width: 20px;
			line-height: 0;
			font-size: 0;
			cursor: pointer;
			background: transparent;
			color: transparent;
			padding: 0;
			border: none;
			&:focus { outline: none; }
			&:before {
				font-family: "slick";
				font-size: 20px;
				line-height: 1;
				color: white;
				opacity: 0.85;
				-webkit-font-smoothing: antialiased;
				-moz-osx-font-smoothing: grayscale;
				content: '×';
			}
		}
	}
	.slick-loading .slick-list {
		background-color: transparent;
	}
	.slick-prev {
		left: 15px;
	}
	.slick-next {
		right: 15px;
	}
}

